# tqec

./: .gitignore  CMakeLists.txt  LICENSE  box.py  main.py  module.py  readme.md  requirements.txt  test.py
c++/: .gitignore  CMakeLists.txt
c++/src/lib/conn/: best_first_search.cpp  best_first_search.hpp  connection.cpp  connection.hpp  io.cpp  io.hpp  obstacles.cpp  obstacles.hpp  passage_counters.cpp  passage_counters.hpp  weights.cpp  weights.hpp
c++/src/lib/spare/: sa.cpp
c++/src/lib/spare_ex/: sa.hpp  sa_impl.hpp  sa_shared_impl.hpp
c++/src/lib/spp/: io.cpp  io.hpp  point.hpp  priority_container.hpp  rectangle.hpp  rectangular.hpp  size.hpp  spp3.cpp  spp3.hpp
c++/src/lib/util/: math.hpp  math_impl.hpp
c++/src/main/: connection.cpp  module_placement.cpp  spare_optimization.cpp
c++/src/spare_optimaization/: a.out  sa_non_shared.hpp  sa_non_shared_impl.hpp  sa_shared.hpp  spare.cpp
c++/test_data/: 2d_endpoints.csv  2d_obstacles.csv  example_endpoints.csv  example_obstacles.csv  example_spp3.csv  simple_endpoints.csv  simple_obstacles.csv
cmake/: external_projects.cmake
data/box/: a.json  cv.json  t.json  y.json
data/icm/: benchmark1.icm.json  cv.icm.json  h.json  t.icm.json  test.json  toffoli.icm.json  y.icm.json
data/icpm/: benchmark1.icpm.json  s+.icpm.json  toffoli.icpm.json
data/qc/: benchmark1.qc.json
data/templates/: a.json  compiler.py  cv.json  h.json  t+.json  t.json  y.json
lib/: box.py  circuit.py  completion.py  converter.py  elements.py  inner_module.py  module.py  switch_module.py  template.py  util.py
optimizations/algorithmic_circuit_steps/: readme.md
optimizations/algorithmic_circuit_steps/cmake/: json11.cmake
optimizations/algorithmic_ciruit_steps/: CMakeLists.txt
optimizations/algorithmic_ciruit_steps/cmake/: find_qc.cmake  qc.cmake
optimizations/algorithmic_ciruit_steps/src/: main.cpp
optimizations/module_placement/: CMakeLists.txt
optimizations/module_placement/cmake/: external_projects.cmake  find_mathutils.cmake  find_spp.cmake  spp.cmake
optimizations/spare_module_number/: module.cpp  sa.cpp
parallelization/cmake/: external_projects.cmake  find_graph.cmake  graph.cmake  qc.cmake
src/connection/: CMakeLists.txt
src/connection/cmake/: external_projects.cmake
src/connection/src/: connection.cpp
src/connection/src/lib/: area.cpp  area.hpp  best_first_search.cpp  best_first_search.hpp  connection.cpp  io.cpp  io.hpp  io_private.hpp  node.cpp  node.hpp  obstacles.cpp  obstacles.hpp  size.cpp  size.hpp
src/optimization/: CMakeLists.txt
src/optimization/cmake/: find_json11.cmake
src/optimization/sample_data/: example_sa.json
src/optimization/src/: sa.cpp
src/parallelization/: CMakeLists.txt
src/parallelization/cmake/: external_projects.cmake  mathutils.cmake
src/placement/: CMakeLists.txt
src/placement/cmake/: mathutils.cmake
sub/parallelization/: .gitignore  CMakeLists.txt
sub/spare_module_number/: module.hpp  sa.hpp
tmp/: 2.qo  2_result.qo  cv_0.qo  h_0.qo  spare.csv
(+10 files in other folders)
